--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,10 @@
                 <p>
                     Y este es el parrafo de inicio donde vamos a explicar las
                     cosas increibles que se pueden hacer con ramas.
+                    <p>Los blogs son la mejor forma de compartir informacion y tus ideas.
+                        Mucha mas que ir a conferencias o salir en YouTube. Excepto si eres
+                        un Rockstar. Pero estadisticamente no lo eres... por ahora.
+                    </p>
                 </p>
             </div>
         </div>
