--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
@@ -21,7 +21,7 @@
                     <p>Los blogs son la mejor forma de compartir informacion y tus ideas.
                         Mucha mas que ir a conferencias o salir en YouTube. Excepto si eres
                         un Rockstar. Pero estadisticamente no lo eres... por ahora.
-                    </p>
+                    </p><p>Suscribete y dale like</p>
                 </p>
             </div>
         </div>
